Fix Layout on small devices

--- a/src/main/resources/static/css/style.scss
+++ b/src/main/resources/static/css/style.scss
@@ -266,10 +266,12 @@ h2 {
 .startpage {
     background-image: url(../img/header_image.jpg);
     background-size: cover;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    @include media-breakpoint-up(sm) {
+        height: 100%;
+    }
 }
 
 /* ==========================================================================
